--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:stylelint": "stylelint source/scss/*.scss",
     "build:test": "standard clicky.js",
     "build:sass": "node-sass source/scss/style.scss --output=compiled/css --output-style=compressed --source-map=true",
-    "deploy:surge": "surge --project . --domain sassy-project.surge.sh",
+    "deploy:surge": "surge --project . --domain https://chengming1-js-package-json-int.surge.sh",
     "deploy": "run-s build:* deploy:surge"
   },
   "devDependencies": {
